# lytmus-assessment

./: ai_provider.py  datatypes.py  main.py  playground.ipynb  prompts.py  pyproject.toml
core/: comparative_analyzer.py  datatypes.py  prompts.py  relevance_evaluator.py  solution_builder.py
helpers/: ai_provider.py  dataloader.py  utils.py
