[project]
name = "lytmus-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.30.0",
    "ipykernel>=6.30.1",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "pip>=25.2",
]
